# Sharpeye

./: .gitignore  .gitlab-ci.yml  README.md  SharpeyeKeystore.jks  centroidtracker.cpp  centroidtracker.hpp  keystore.properties  local.properties  opencv_tensorflow_multiobject_tracker.cpp  settings.gradle
app/: build.gradle  version.properties
app/src/main/: AndroidManifest.xml
app/src/main/assets/: detect-small-quant.tflite  detect_sign.tflite  detecty.tflite  fooquantized.tflite  labels.txt  labels_frozen.txt  labelsign.txt  labeluu.txt  starting_popup_en.json  starting_popup_es.json  starting_popup_fr.json  starting_popup_zh.json  trafficLabels.txt  trafficSignsLabels.txt  traffic_signs.json  warning_events.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: Tracker.hpp  centroidtracker.hpp  collisionpredictor.hpp
app/src/main/cpp/src/: Tracker.cpp  centroidtracker.cpp  collisionpredictor.cpp  native-lib.cpp
app/src/main/res/drawable/: ic_chevron_down.xml  ic_chevron_up.xml  ic_close.xml  ic_empty_speed_sign.xml  ic_menu_about.xml  ic_menu_alert.xml  ic_menu_camera.xml  ic_menu_mail.xml  ic_menu_settings.xml  ic_menu_sign.xml  ic_menu_voice_assist.xml  ic_vector_logo.xml  launch_screen.xml
app/src/main/res/layout/: activity_camera.xml  activity_camera_last.xml  app_bar_camera.xml  (+8 more)
gradle/wrapper/: gradle-wrapper.properties
models/car - person/: detect_global.tflite
models/traffic sign general/: generalTrafficLabels.txt
tmp_test/: docker_run.sh  opencv_tensorflow_multiobject_tracker.cpp  opencvtracker.hpp
tmp_test/collision_detection/: build.sh  centroidtracker.hpp  collisionpredictor.cpp  collisionpredictor.hpp  opencv_tensorflow_multiobject_tracker.cpp  opencvtracker.cpp  opencvtracker.hpp  predictor
(+123 files in other folders)
